<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2014 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>

    <string name="app_name">Cloud2Mesh</string>
    <string name="menu_point_cloud">Record Point Cloud</string>
    <string name="menu_area_learning">Learn Area</string>
    <string name="vertex_count">Number of points:</string>
    <string name="serviceversion">Tango service version:</string>
    <string name="appversion">"App version: "</string>
    <string name="tangoevent">"Tango system event: "</string>
    <string name="start2device">"Device wrt Start "</string>
    <string name="adf2start">"Start wrt ADF "</string>
    <string name="adf2device">"Device wrt ADF "</string>
    <string name="posecount">"pose count "</string>
    <string name="status">"status "</string>
    <string name="deltatime">"delta time (ms) "</string>
    <string name="pose">"position (m) "</string>
    <string name="quat">"orientation "</string>
    <string name="first_person">First</string>
    <string name="third_person">Third</string>
    <string name="top_down">Top</string>
    <string name="start">Start</string>
    <string name="autoreseton">Auto Reset On</string>
    <string name="autoresetoff">Auto Reset Off</string>
    <string name="averageZ">"Average depth (m): "</string>
    <string name="pointCount">"Point count: "</string>
    <string name="frameDelta">"Frame delta time (ms): "</string>
    <string name="TangoError">"Tango Exception! Try again!"</string>
    <string name="TangoInvalid">"Tango Invalid Exception! Try again!"</string>
    <string name="TangoOutOfDateException">"Tango Service outdated!"</string>
    <string name="motiontrackingpermission">"Motion Tracking permission needed!"</string>
    <string name="arealearningpermission">"Area Learning permission needed!"</string>
    <string name="NA">"N/A"</string>
    <string name="pose_initializing">"initializing"</string>
    <string name="adf_pose">"ADF pose: "</string>
    <string name="adf_pose_invalid">"invalid"</string>
    <string name="adf_pose_valid">"valid"</string>
    <string name="adf_loop_closuer">"Loop closure: "</string>
    <string name="pose_valid">"valid"</string>
    <string name="pose_invalid">"invalid"</string>
    <string name="pose_unknown">"unknown"</string>
    <string name="latest_adf_is">"Latest ADF is: "</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <!-- Action Bar Titles -->
    <string-array name="activities">
        <item>Learn Area</item>
        <item>Record Point Cloud with ADF</item>
        <item>Record Point Cloud without ADF</item>
        <item>Send Point Clouds</item>
    </string-array>

    <!-- SOCKET -->
    <string name="set_socket_dialogTitle">Set the Server attributes</string>
    <string name="address">Destination address</string>
    <string name="port">Destination port</string>
    <string name="connect">Connect</string>

    <!-- AREA LEARNING -->
    <string name="set_name_dialogTitle">Set the ADF name</string>
    <string name="cancel">Cancel</string>
    <string name="save_adf">Save ADF</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>

    <string name="no_uuid">"no ADFs"</string>
    <string name="number_of_adfs">"No of ADFs: "</string>
    <string name="adf_save">"ADF saved with UUID: "</string>

    <string-array name="SetDialogMenuItemsAPISpace">
        <item>Rename</item>
        <item>Delete from API space</item>
        <item>Export to App space</item>
    </string-array>
    <string-array name="SetDialogMenuItemsAppSpace">
        <item>Delete from  App space</item>
        <item>Import to API space</item>
    </string-array>
</resources>