<!--
   Copyright (C) 2014 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/profile_container"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true">

            <android.opengl.GLSurfaceView
                android:id="@+id/gl_surface_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                />

            <com.google.atap.tangoservice.TangoCameraPreview
                android:id="@+id/gl_camera_view"
                android:layout_width="480px"
                android:layout_height="270px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:scaleType="center" />

            <FrameLayout
                android:id="@+id/description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TableLayout
                    android:layout_width="700dp"
                    android:layout_height="100dp"
                    android:background="#7fa4a4a4"
                    android:layout_gravity="left|left"
                    android:baselineAligned="false">

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text=""/>
                        <TextView
                            android:text="@string/start2device"/>
                        <TextView
                            android:text="@string/adf2device"/>
                        <TextView
                            android:text="@string/adf2start"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/status"/>

                        <TextView
                            android:id="@+id/start2deviceStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/adf2deviceStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/adf2startStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/posecount" />

                        <TextView
                            android:id="@+id/start2devicePosecount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/adf2devicePosecount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/adf2startPosecount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/pose"/>

                        <TextView
                            android:id="@+id/adf2devicePose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/start2devicePose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/adf2startPose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_column="1"
                            android:text="@string/quat"/>

                        <TextView
                            android:id="@+id/adf2deviceQuat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/start2deviceQuat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />

                        <TextView
                            android:id="@+id/adf2startQuat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/NA" />
                    </TableRow>

                </TableLayout>
            </FrameLayout>



            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adf_pose"
                android:layout_alignBottom="@+id/third_person_button"
                android:layout_marginStart="5dp"/>

            <TextView
                    android:id="@+id/adf_pose_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA"
                    android:layout_alignBottom="@+id/third_person_button"
                    android:layout_marginStart="70dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adf_loop_closuer"
                android:layout_alignBottom="@+id/third_person_button"
                android:layout_marginStart="115dp"/>

            <TextView
                android:id="@+id/adf_loop_closure_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NA"
                android:layout_alignBottom="@+id/third_person_button"
                android:layout_marginStart="200dp" />-->

            <FrameLayout
                android:id="@+id/adf_record_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                >
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="left|left">

                    <TableRow>

                        <Switch
                            android:layout_column="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Record PCL"
                            android:id="@+id/record_pcl_switch"
                            android:layout_below="@+id/third_person_button"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="5dp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Saved PCL Files: 0"
                            android:id="@+id/saved_pcl_files_textview" />

                    </TableRow>
                </TableLayout>
            </FrameLayout>

            <Button
                android:id="@+id/first_person_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/third_person_button"
                android:layout_alignLeft="@+id/third_person_button"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"
                android:text="@string/first_person" />

            <Button
                android:id="@+id/top_down_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"
                android:text="@string/top_down" />

            <Button
                android:id="@+id/third_person_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/top_down_button"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"
                android:text="@string/third_person" />

            <com.google.atap.tango.ux.TangoUxLayout
                android:id="@+id/layout_tango"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.1dp"
        />

</android.support.v4.widget.DrawerLayout>